--- a/TenIdeas/res/layout/ideas.xml
+++ b/TenIdeas/res/layout/ideas.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/enter_idea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/enter_idea" />
